Fixed icon alignment on mobile jump-to-video button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,8 @@ body {
     height: 30px;
     width: 30px;
     border-radius: 50%;
-    text-align: center;
+    display: flex;
+    justify-content: center;
 }
 
 .down-btn-lg {
